# RSA-Project

./: .gitignore  .gitmodules  README.md  route-1.gpx  simulator.py
simulator/: route2.gpx  simulator.py  test.py
vanetza/: .gitignore  CMakeCache.txt  CMakeLists.txt  Dockerfile  Makefile  README.md  VanetzaConfig.cmake  VanetzaExports.cmake  cmake_install.cmake  docker-compose.yml  entrypoint.sh  log_obu1  obus.txt  output  t
vanetza/asn1/: DSRC.asn  DSRC_REGION_noCircular.asn  IEEE1609dot2.asn  IEEE1609dot2BaseTypes.asn  TS103300-3v211-VAM.asn
vanetza/examples/: in_cam.json  in_cam_full.json
vanetza/tools/dds_service/: Vanetza_DDS_Spec.xml  go.mod  go.sum  main.go  read_test.py  write_test.py
vanetza/tools/proxy_fake_feed/: Makefile  cmake_install.cmake
vanetza/tools/socktap/: CMakeCache.txt  CMakeLists.txt  Makefile  application.hpp  asn1json.cpp  asn1json.hpp  asn1json.py  cam_application.cpp  cam_application.hpp  cmake_install.cmake  complete_packet.cpp  complete_packet.hpp  config.cpp  config.hpp  config.ini  cpm_application.cpp  cpm_application.hpp  dds.cpp  dds.h  denm_application.cpp  denm_application.hpp  link_layer.cpp  main.cpp  mapem_application.cpp  mapem_application.hpp  mqtt.cpp  mqtt.h  positioning.cpp  positioning.hpp  raw_socket_link.cpp  raw_socket_link.hpp  requirements.txt  router_context.cpp  router_context.hpp  security.cpp  spatem_application.cpp  spatem_application.hpp  vam_application.cpp  vam_application.hpp
vanetza/vanetza/access/: Makefile  cmake_install.cmake
vanetza/vanetza/asn1/: CMakeLists.txt  Makefile  asn1c_its_sources.txt  asn1c_wrapper.cpp  cmake_install.cmake  vam.hpp
vanetza/vanetza/btp/: Makefile  cmake_install.cmake  ports.hpp
vanetza/vanetza/common/: Makefile  cmake_install.cmake
vanetza/vanetza/dcc/: Makefile  cmake_install.cmake
vanetza/vanetza/facilities/: Makefile  cmake_install.cmake
vanetza/vanetza/geonet/: Makefile  cmake_install.cmake
vanetza/vanetza/gnss/: Makefile  cmake_install.cmake
vanetza/vanetza/net/: Makefile  cmake_install.cmake  cohesive_packet.cpp  cohesive_packet.hpp
vanetza/vanetza/security/: Makefile  cmake_install.cmake
vanetza/vanetza/units/: Makefile  cmake_install.cmake
web-app/backend/: docker-compose.yml  main.py
web-app/frontend/: package-lock.json  package.json
(+13 files in other folders)
